# clairvoyant

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
clairvoyant/: engine.py  exchange.py  helpers.py  rlengine.py
examples/: example.py
tests/: testexchange.py
