[project]
name = "clairvoyant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.6.3",
    "matplotlib>=3.10.0",
    "nose2>=0.15.1",
    "numpy>=2.2.2",
    "scikit-learn>=1.6.1",
    "ta>=0.11.0",
    "yfinance>=0.2.52",
]
